--- a/starter-code/styles.css
+++ b/starter-code/styles.css
@@ -5,4 +5,31 @@ body {
 }
 body main {
   width: 375px;
+  border: 1px solid;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+body main .logo {
+  margin: 2rem 0;
+}
+body main .hero {
+  width: 414px;
+  height: 153px;
+}
+body main .hero .hero-left {
+  width: 190px;
+  height: 153px;
+}
+body main .hero .hero-right {
+  width: 190px;
+  height: 153px;
+  position: relative;
+  left: 30px;
+}
+body main h1 {
+  font-size: 2.5rem;
+  padding: 0 4rem;
 }/*# sourceMappingURL=styles.css.map */
