--- a/starter-code/styles.css
+++ b/starter-code/styles.css
@@ -1,16 +1,21 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   display: flex;
   align-items: center;
   justify-content: center;
+  font-family: "Red Hat", sans-serif;
 }
 body main {
   width: 375px;
-  border: 1px solid;
   overflow: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  text-align: center;
 }
 body main .logo {
   margin: 2rem 0;
@@ -26,10 +31,121 @@ body main .hero .hero-left {
 body main .hero .hero-right {
   width: 190px;
   height: 153px;
-  position: relative;
-  left: 30px;
 }
 body main h1 {
   font-size: 2.5rem;
-  padding: 0 4rem;
+  color: #28283d;
+  margin-bottom: 1rem;
+}
+body main p {
+  padding: 0 2rem;
+  line-height: 1.625rem;
+  color: #87879d;
+}
+body main .download-button1 {
+  width: 193px;
+  height: 58px;
+  border-radius: 2rem;
+  border: 0;
+  background-color: #4d96a9;
+  color: #ffffff;
+  margin-bottom: 1rem;
+}
+body main .download-button1 span {
+  color: #8fe3f9;
+}
+body main .what-is-it-button {
+  width: 139px;
+  height: 58px;
+  border-radius: 2rem;
+  border: 0;
+  background-color: #855fb1;
+  color: #ffffff;
+  margin-bottom: 1rem;
+}
+body main .line {
+  width: 1px;
+  height: 84px;
+  border: 0;
+  position: relative;
+  top: 1px;
+  background-color: #87879d;
+}
+body main .circle {
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+  border: 1px solid #87879d;
+  margin-bottom: 2rem;
+  z-index: 100;
+  background-color: white;
+}
+body main .circle p {
+  position: relative;
+  right: 12px;
+}
+body main .models {
+  width: 327px;
+  height: 310px;
+}
+body main .models img {
+  width: 151px;
+  height: 143px;
+  padding: 5px 5px;
+  border-radius: 1rem;
+}
+body main h2 {
+  font-size: 1rem;
+  color: #4d96a9;
+  margin-bottom: -1rem;
+}
+body main .smarter-meetings {
+  padding: 0 2rem;
+  font-size: 2rem;
+  line-height: 2.25rem;
+  color: #28283d;
+}
+body main .send-message {
+  color: #87879d;
+  margin-top: -1rem;
+}
+body main footer {
+  margin-top: -55px;
+  position: relative;
+  height: 428px;
+  background-image: url("assets/mobile/image-footer.jpg");
+  background-size: contain;
+}
+body main footer h3 {
+  color: #fafafa;
+  font-size: 2rem;
+  line-height: 36px;
+  position: relative;
+  z-index: 10;
+  margin-top: 5rem;
+}
+body main footer p {
+  font-size: 1.125rem;
+  color: white;
+  position: relative;
+  z-index: 10;
+  margin-bottom: 3rem;
+}
+body main footer .download-button2 {
+  width: 193px;
+  height: 58px;
+  border-radius: 3rem;
+  background-color: #855fb1;
+  border: 0;
+  position: relative;
+  z-index: 10;
+}
+body main footer::before {
+  position: absolute;
+  display: block;
+  background-color: #4d96a9;
+  width: 100%;
+  height: 100%;
+  content: "";
+  opacity: 0.8;
 }/*# sourceMappingURL=styles.css.map */
