--- a/starter-code/styles.scss
+++ b/starter-code/styles.scss
@@ -1,18 +1,33 @@
+$cyan: #4d96a9;
+$blueMagenta: #855fb1;
+$darkMagenta: #28283d;
+$lighMagenta: #87879d;
+$lightCyan: #8fe3f9;
+$veryLighMagenta: #d9b8ff;
+$lightGray: #fafafa;
+
+
+*{
+    box-sizing: border-box;
+}
+
 body {
     display: flex;
     align-items: center;
     justify-content: center;
+    font-family: "Red Hat", sans-serif;
+    
     
     
 
     main {
         width: 375px;
-        border: 1px solid;
         overflow: hidden;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        text-align: center;
        
 
         .logo {
@@ -33,8 +48,7 @@ body {
             .hero-right{
                 width: 190px;
                 height: 153px;
-                position: relative;
-                left: 30px;
+               
 
             }
 
@@ -45,7 +59,149 @@ body {
 
         h1 {
             font-size: 2.5rem;
-            padding: 0 4rem;
+            color: $darkMagenta;
+            margin-bottom: 1rem;
+
+            
         }
+
+        p {
+            padding: 0 2rem;
+            line-height: 1.625rem;
+            color: $lighMagenta;
+        }
+
+        .download-button1 {
+            width: 193px;
+            height: 58px;
+            border-radius: 2rem;
+            border: 0;
+            background-color: $cyan;
+            color: #ffffff;
+            margin-bottom: 1rem;
+
+            span {
+                color: $lightCyan;
+            }
+        }
+
+        .what-is-it-button {
+            width: 139px;
+            height: 58px;
+            border-radius: 2rem;
+            border: 0;
+            background-color: $blueMagenta;
+            color: #ffffff;
+            margin-bottom: 1rem;
+        }
+
+        .line {
+            width: 1px;
+            height: 84px;
+            border: 0;
+            position: relative;
+            top: 1px;
+            background-color: $lighMagenta;
+        }
+
+        .circle {
+            width: 56px;
+            height: 56px;
+            border-radius: 50%;
+            border: 1px solid $lighMagenta;
+            margin-bottom: 2rem;
+            z-index: 100;
+            background-color: white;
+            
+
+            p {
+                position: relative;
+                right: 12px;
+            }
+            
+        }
+
+        .models {
+            width: 327px;
+            height: 310px;
+
+            img {
+                width: 151px;
+                height: 143px;
+                padding: 5px 5px;
+                border-radius: 1rem;
+            }
+        }
+
+        h2 {
+
+            font-size: 1rem;
+            color: $cyan;
+            margin-bottom: -1rem;
+        }
+
+        .smarter-meetings {
+            padding: 0 2rem;
+            font-size: 2rem;
+            line-height: 2.25rem;
+            color: $darkMagenta;
+        }
+
+        .send-message {
+            color: $lighMagenta;
+            margin-top: -1rem;
+        }
+
+        footer {
+            margin-top: -55px;
+            position: relative;
+            height: 428px;
+            background-image: url("assets/mobile/image-footer.jpg");
+            background-size: contain;
+            
+
+            h3 {
+                color: #fafafa;
+                font-size: 2rem;
+                line-height: 36px;
+                position: relative;
+                z-index: 10;
+                margin-top: 5rem;
+            }
+
+            p {
+
+                font-size: 1.125rem;
+                color: white ;
+                position: relative;
+                z-index: 10;
+                margin-bottom: 3rem;
+            }
+
+            .download-button2 {
+                width: 193px;
+                height: 58px;
+                border-radius: 3rem;
+                background-color: $blueMagenta;
+                border: 0;
+                position: relative;
+                z-index: 10;
+            }
+            
+        }
+        footer::before {
+            position: absolute;
+            display: block;
+            background-color: $cyan;
+            width: 100%;
+            height: 100%;
+            content: "";
+            opacity: 0.8;
+            
+        }
+
+
     }
+
+  
 }
