--- a/styles.scss
+++ b/styles.scss
@@ -359,6 +359,10 @@ body {
                 }
            }
 
+           h2 {
+                margin-top: 5rem;
+           }
+
            .smarter-meetings {
                 padding: 0 31rem;
            }
